ADnD 2E Revised/2EStyle.css
/* ... */
.charsheet input[type="radio"]
{
    opacity: 0;
    width: 120px;
    height: 30px;
    position: absolute;
    cursor: pointer;
    z-index: 1;
}
.charsheet input[type="checkbox"]
{
    opacity: 0;
    width: 16px;
    height: 16px;
    position: relative;
    left: 10px;
    margin: -10px;
    cursor: pointer;
    z-index: 1;
}
input.sheet-tab + span::before,
input.sheet-tab + span::before
{
    margin-right: 4px;
    border: solid 1px #a8a8a8;
    line-height: 14px;
    text-align: center;
    display: inline-block;
    vertical-align: middle;
    
    -moz-box-shadow: 0 0 2px #ccc;
    -webkit-box-shadow: 0 0 2px #ccc;
    box-shadow: 0 0 2px #ccc;
    
    background: #f6f6f6;
    background: -moz-radial-gradient(#f6f6f6, #dfdfdf);
    background: -webkit-radial-gradient(#f6f6f6, #dfdfdf);
    background: -ms-radial-gradient(#f6f6f6, #dfdfdf);
    background: -o-radial-gradient(#f6f6f6, #dfdfdf);
    background: radial-gradient(#f6f6f6, #dfdfdf);
}

.charsheet label {
    position: relative;
    display:inline;
    font-size: 12px;
    line-height:1em;
    margin: 0 0 0 0;
    padding: 0 0 0 0;
}

.charsheet h1,
.charsheet h2,
.charsheet h3,
.charsheet h4,
.charsheet h5,
.charsheet h6 {
    font-weight: 800;
}

/*h2,h3,h4,h5,h6 {*/
/*    line-height:1em;*/
/*	display:inline;*/
/*    font-family: Arial, sans-serif;*/
/*	font-size:.8125rem;*/
/*	color: #000;*/
/*}*/


/*h1 {*/
/*	width: 100%;*/
/*	background-color: #FFF;*/
/*	color: #000;*/
/*	padding:.2em 0 0 0;*/
/*	min-height: 1em;*/
/*	margin: 0 0 .5em 0;*/
/*	font-size:.8125rem;*/
/*	line-height:1.4em;*/
/*	display:block;*/
/*	text-align:center;*/
/*}*/

.sheet-small-label1 {
    display: inline-block;
    padding: .5em .07em 0 .07em;
	margin: .75rem .4em 1.125rem .4em;
	height: 1.85em;
    width: 72px;
	vertical-align: middle;
    text-align:center;
	font-size: .85em;
	font-style: italic;
	font-weight: bold;	
	/*firefox has to be squeezed */
	-moz-margin-start:-2px;
	-moz-margin-end:-2px;
}

.sheet-small-label1  span {
	padding: .5em .07em 0 .07em;
    text-align:center;
	font-size: .85em;
	font-style: italic;
	font-weight: bold;	
	float:left; /* floats but 100% wide. */
	/*firefox has to be squeezed */
	-moz-margin-start:-2px;
	-moz-margin-end:-2px;
}
.sheet-small-label1  input::-moz-focus-inner {
	padding: 0;
}
.sheet-small-label1 select {
    margin-top:-2px;
    width: 72px;
    border: .5px;
}
.sheet-small-label2 {
    display: inline-block;
	padding: .5em .07em 0 .07em;
	margin: .75rem .4em 1.125rem .4em;
	height: 1.85em;
    width: 63px;
	vertical-align: middle;
    text-align:center;
	font-size: .85em;
	font-style: italic;
	font-weight: bold;	
	/*firefox has to be squeezed */
	-moz-margin-start:-2px;
	-moz-margin-end:-2px;
}

.sheet-small-label2  span {
	padding: .5em .07em 0 .07em;
    text-align:center;
	font-size: .85em;
	font-style: italic;
	font-weight: bold;	
	float:left; /* floats but 100% wide. */
	/*firefox has to be squeezed */
	-moz-margin-start:-2px;
	-moz-margin-end:-2px;
}
.sheet-small-label2  input::-moz-focus-inner {
	padding: 0;
}
.sheet-small-label2 select {
    margin-top:-2px;
    width: 63px;
    border: .5px;
}
.sheet-small-label3 {
    display: inline-block;
    padding: .5em .07em 0 .07em;
	margin: .75rem .4em 1.125rem .4em;
	height: 1.85em;
    width: 85px;
	vertical-align: middle;
    text-align:center;
	font-size: .85em;
	font-style: italic;
	font-weight: bold;	
	/*firefox has to be squeezed */
	-moz-margin-start:-2px;
	-moz-margin-end:-2px;
}

.sheet-small-label3  span {
	padding: .5em .07em 0 .07em;
    text-align:center;
	font-size: .85em;
	font-style: italic;
	font-weight: bold;	
	float:left; /* floats but 100% wide. */
	/*firefox has to be squeezed */
	-moz-margin-start:-2px;
	-moz-margin-end:-2px;
}
.sheet-small-label3  input::-moz-focus-inner {
	padding: 0;
}
.sheet-small-label3 select {
    margin-top:-2px;
    width: 85px;
    border: .5px;
}
.sheet-small-label4 {
    display: inline-block;
    padding: .5em .07em 0 .07em;
	margin: .75rem .4em 1.125rem .4em;
	height: 1.85em;
    width: 67px;
	vertical-align: middle;
    text-align:center;
	font-size: .85em;
	font-style: italic;
	font-weight: bold;	
	/*firefox has to be squeezed */
	-moz-margin-start:-2px;
	-moz-margin-end:-2px;
}

.sheet-small-label4  span {
	padding: .5em .07em 0 .07em;
    text-align:center;
	font-size: .85em;
	font-style: italic;
	font-weight: bold;	
	float:left; /* floats but 100% wide. */
	/*firefox has to be squeezed */
	-moz-margin-start:-2px;
	-moz-margin-end:-2px;
}
.sheet-small-label4  input::-moz-focus-inner {
	padding: 0;
}
.sheet-small-label4 select {
    margin-top:-2px;
    width: 67px;
    border: .5px;
}
.sheet-small-label5 {
    display: inline-block;
    padding: .5em .07em 0 .07em;
    margin: .75rem .4em 1.125rem .4em;
	height: 1.85em;
    width: 105px;
	vertical-align: middle;
    text-align:center;
	font-size: .85em;
	font-style: italic;
	font-weight: bold;	
	/*firefox has to be squeezed */
	-moz-margin-start:-2px;
	-moz-margin-end:-2px;
}

.sheet-small-label5  span {
	padding: .5em .07em 0 .07em;
    text-align:center;
	font-size: .85em;
	font-style: italic;
	font-weight: bold;	
	float:left; /* floats but 100% wide. */
	/*firefox has to be squeezed */
	-moz-margin-start:-2px;
	-moz-margin-end:-2px;
}
.sheet-small-label5  input::-moz-focus-inner {
	padding: 0;
}
.sheet-small-label5 select {
    margin-top:-2px;
    width: 105px;
    border: .5px;
}
.sheet-small-label6 {
    display: inline-block;
    padding: .5em .07em 0 .07em;
    margin: .75rem .4em 1.125rem .4em;
    height: 1.85em;
    width: 75px;
	vertical-align: middle;
    text-align:center;
	font-size: .85em;
	font-style: italic;
	font-weight: bold;	
	/*firefox has to be squeezed */
	-moz-margin-start:-2px;
	-moz-margin-end:-2px;
}
/* ... */

